WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244484
REGRESSION(
253764@main
): Disconnecting a subtree makes :lang pseudo class to never match
https://bugs.webkit.org/show_bug.cgi?id=244484
Summary
REGRESSION(253764@main): Disconnecting a subtree makes :lang pseudo class to ...
Ryosuke Niwa
Reported
2022-08-29 01:22:15 PDT
There is a bug whereby disconnecting a subtree with a lang content attribute makes :lang pseudo class to never match a descendant of an element with the lang content attribute.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-29 01:54:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3764
Radar WebKit Bug Importer
Comment 2
2022-08-29 02:31:45 PDT
<
rdar://problem/99268632
>
EWS
Comment 3
2022-08-29 11:13:46 PDT
Committed
253915@main
(06479a26a2b9): <
https://commits.webkit.org/253915@main
> Reviewed commits have been landed. Closing PR #3764 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug